[gd_scene load_steps=29 format=3 uid="uid://bn1witksaoc2t"]

[ext_resource type="Script" path="res://src/monkey.gd" id="1_5saq5"]
[ext_resource type="Shader" path="res://src/TeamColorMask.gdshader" id="2_yi6cb"]
[ext_resource type="Texture2D" uid="uid://cqf2yaue5jyev" path="res://assets/monkey_rest.png" id="3_li4bi"]
[ext_resource type="Texture2D" uid="uid://6n84h4xyjugb" path="res://assets/monkey_active.png" id="3_tv68b"]
[ext_resource type="Texture2D" uid="uid://b7dkqd53k1ouf" path="res://assets/monkey_running.png" id="4_83pqo"]
[ext_resource type="AudioStream" uid="uid://c8eubf4d13y5l" path="res://assets/audio/monkey_cute_aagh.wav" id="6_fe0ke"]
[ext_resource type="AudioStream" uid="uid://cgwgp6uljof32" path="res://assets/audio/monkey_cute_oough.wav" id="7_o0w08"]
[ext_resource type="AudioStream" uid="uid://b1gl45xeyt0u0" path="res://addons/kenney impact sounds/impact_punch_medium_000.ogg" id="8_11fvo"]
[ext_resource type="AudioStream" uid="uid://bybdko1jgyil3" path="res://addons/kenney impact sounds/footstep_grass_001.ogg" id="8_ff167"]
[ext_resource type="AudioStream" uid="uid://cq1nuohv6lde1" path="res://addons/kenney impact sounds/impact_punch_medium_001.ogg" id="9_hoiq5"]
[ext_resource type="AudioStream" uid="uid://bcx0j4mrfhbuf" path="res://addons/kenney impact sounds/footstep_grass_002.ogg" id="9_sxswe"]
[ext_resource type="AudioStream" uid="uid://hiq4tlj8gpg5" path="res://addons/kenney impact sounds/impact_punch_medium_002.ogg" id="10_ho8tu"]
[ext_resource type="AudioStream" uid="uid://iruf2ybioino" path="res://addons/kenney impact sounds/footstep_grass_003.ogg" id="10_hxbl8"]
[ext_resource type="AudioStream" uid="uid://d15s7hi6busai" path="res://addons/kenney impact sounds/impact_punch_heavy_004.ogg" id="11_73djk"]
[ext_resource type="AudioStream" uid="uid://dhbhvwvm6k1ei" path="res://addons/kenney impact sounds/impact_punch_heavy_003.ogg" id="12_v00mb"]

[sub_resource type="PhysicsMaterial" id="PhysicsMaterial_iocqa"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_w4eea"]
shader = ExtResource("2_yi6cb")
shader_parameter/masking_color = Color(0.721569, 0.458824, 0.0392157, 1)
shader_parameter/replacement_color = Color(0.462745, 0.462745, 0.462745, 1)
shader_parameter/masking_range = 0.1

[sub_resource type="SpriteFrames" id="SpriteFrames_3h7sq"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_tv68b")
}],
"loop": true,
"name": &"active",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("4_83pqo")
}, {
"duration": 1.0,
"texture": ExtResource("3_tv68b")
}],
"loop": true,
"name": &"angry",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_li4bi")
}],
"loop": true,
"name": &"resting",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_g08h3"]
radius = 8.0

[sub_resource type="Animation" id="Animation_lcate"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("BaseSprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Body_Hit_Box:position:x")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/2/type = "bezier"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Body_Hit_Box:position:y")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(8, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("BaseSprite:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_bgyvy"]
resource_name = "damage received"
length = 3.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("BaseSprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 1, 1.5, 2, 2.6, 3),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_8r6bc"]
resource_name = "idle"
loop_mode = 1
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Body_Hit_Box:position:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Body_Hit_Box:position:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(8, -0.25, 0, 0.25, 0, 8, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 0.0001)
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("BaseSprite:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_dk2th"]
resource_name = "walk"
loop_mode = 1
step = 0.0416667
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("BaseSprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5004, 0.9591),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [Vector2(0, 0), Vector2(0, -10), Vector2(0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_wrjd7"]
_data = {
"RESET": SubResource("Animation_lcate"),
"damage received": SubResource("Animation_bgyvy"),
"idle": SubResource("Animation_8r6bc"),
"walk": SubResource("Animation_dk2th")
}

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_qnnpf"]
streams_count = 2
stream_0/stream = ExtResource("6_fe0ke")
stream_0/weight = 1.0
stream_1/stream = ExtResource("7_o0w08")
stream_1/weight = 1.0

[sub_resource type="CircleShape2D" id="CircleShape2D_131wx"]
radius = 30.0666

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_pqexe"]
streams_count = 6
stream_0/stream = ExtResource("8_11fvo")
stream_0/weight = 1.0
stream_1/stream = ExtResource("9_hoiq5")
stream_1/weight = 1.0
stream_2/stream = ExtResource("10_ho8tu")
stream_2/weight = 1.0
stream_3/stream = ExtResource("11_73djk")
stream_3/weight = 1.0
stream_4/stream = ExtResource("12_v00mb")
stream_4/weight = 1.0
stream_5/weight = 1.0

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_n03rs"]
streams_count = 3
stream_0/stream = ExtResource("8_ff167")
stream_0/weight = 1.0
stream_1/stream = ExtResource("9_sxswe")
stream_1/weight = 1.0
stream_2/stream = ExtResource("10_hxbl8")
stream_2/weight = 1.0

[node name="monkey" type="RigidBody2D"]
y_sort_enabled = true
collision_mask = 29
input_pickable = true
inertia = 2.42
physics_material_override = SubResource("PhysicsMaterial_iocqa")
gravity_scale = 0.0
max_contacts_reported = 10
can_sleep = false
lock_rotation = true
linear_damp = 23.203
script = ExtResource("1_5saq5")
FORCE = 1.0
DAMAGE = 10.0
_max_speed = 800.0
_slowing_distance = 50.0
_stopping_distance_threshold = 20.0
_health = 200.0

[node name="BaseSprite" type="AnimatedSprite2D" parent="."]
material = SubResource("ShaderMaterial_w4eea")
sprite_frames = SubResource("SpriteFrames_3h7sq")
animation = &"angry"
frame_progress = 0.405612

[node name="Body_Hit_Box" type="CollisionShape2D" parent="."]
position = Vector2(0, 8)
shape = SubResource("CircleShape2D_g08h3")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_wrjd7")
}

[node name="oough" type="AudioStreamPlayer2D" parent="."]
stream = SubResource("AudioStreamRandomizer_qnnpf")
volume_db = -6.582
max_distance = 1000.0
bus = &"Monkey"

[node name="Attack_Cooldown" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="Attack_Range" type="Area2D" parent="."]
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Attack_Range"]
shape = SubResource("CircleShape2D_131wx")
debug_color = Color(0.94902, 0.188235, 0.337255, 0.419608)

[node name="Oough_Cooldown" type="Timer" parent="."]
one_shot = true
autostart = true

[node name="Hitsounds" type="AudioStreamPlayer2D" parent="."]
stream = SubResource("AudioStreamRandomizer_pqexe")
max_distance = 500.0

[node name="Footsteps" type="AudioStreamPlayer2D" parent="."]
stream = SubResource("AudioStreamRandomizer_n03rs")
volume_db = -0.679
max_distance = 100.0

[node name="Footstep_Timer" type="Timer" parent="."]
one_shot = true
autostart = true

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="tree_entered" from="." to="." method="_on_tree_entered"]
[connection signal="tree_exited" from="." to="." method="_on_tree_exited"]
[connection signal="timeout" from="Attack_Cooldown" to="." method="_on_attack_cooldown_timeout"]
[connection signal="body_entered" from="Attack_Range" to="." method="_on_attack_range_body_entered"]
[connection signal="timeout" from="Oough_Cooldown" to="." method="_on_oough_cooldown_timeout"]
[connection signal="timeout" from="Footstep_Timer" to="." method="_on_footstep_timer_timeout"]
